began nav.css styling. ittle ahead of myself: using flex to align contents of nav

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -2,6 +2,12 @@
  * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
+ * 
+ * google font refs:
+ *
+ * font-family: 'Source Sans Pro', sans-serif;
+ * font-family: 'Bungee', sans-serif;
+ *
  */
 html {
   box-sizing: border-box;
@@ -17,6 +23,7 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 24px;
 }
 
