--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -23,11 +23,26 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 nav span {
   padding: 1.5em;
   text-align: center;
   font-family: 'Bungee', sans-serif;
+}
+
+nav div {
+  padding: 1em 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav p {
+  display: block;
+  margin: 0;
+  padding: 0;
 }
