--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,6 +25,7 @@ body {
   background-color: #f4f1ec;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 24px;
+  position: relative;
 }
 
 /*
