late commit, sry <<; got browser-sync working for dev at localhost:3000 and began work on new-twit.css

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -28,6 +28,12 @@ body {
   position: relative;
 }
 
+main {
+  width: 90%;
+  margin: 0 auto;
+  background-color: inherit;
+}
+
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
