--- a/public/styles/new-twit.css
+++ b/public/styles/new-twit.css
@@ -1,3 +1,15 @@
+.container {
+  position: relative;
+  top: -6em;
+  transition: top 2s ease;
+  z-index: -1;
+}
+
+.container.exposed {
+  top: 0;
+  
+}
+
 .bleedContainer {
   display: block;
   width: 90%;
@@ -11,8 +23,9 @@
   overflow: auto;
   text-align: center;
   background-color: inherit;
-  height: 100%;
+  height: 5em;
   margin-bottom: 2em;
+  
 }
   /* h2 {
   margin-top: 10px;
