--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,7 +26,7 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 24px;
   position: relative;
-  z-index: -1000;
+  z-index: -1000;                              /* init z-index and put the body at the very bottom */
 }
 
 main {
