--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,10 +1,10 @@
 nav {
-  position: sticky;             /* used to ensure navbar remains in the page flow */
+  position: fixed;             /* used to ensure navbar remains in the page flow */
   top: 0;
   left: 0; 
-  background-color: #4056a1;
+  background-color: transparent;
   color: #ffffff;
-  height: 120px;
+  height: 100px;
   width: 100vw;                 /* using viewport units for responsive stuff later */
   z-index: 1000;                /* brute force approach :p */
   display: flex;
@@ -14,7 +14,9 @@ nav {
 }
 
 nav span {
-  padding: 1.5em;
+  line-height: 100%;
+  margin-bottom: 0.7em;
+  margin-left: 1em;
   text-align: center;
   font-family: 'Bungee', sans-serif;
 }
