--- a/public/styles/desktop.css
+++ b/public/styles/desktop.css
@@ -1,9 +1,47 @@
 /* 
 
-WHAT DO WE WANT:
+WHAT DO WE WANT FOR DESKTOP:
 
 1. CHANGE HEADER / MAIN SPLIT TO HORIZONTAL
-2. MAKE HEADER STICKY AND CHANGE MARGIN TO WINDOW FIT THE CONTENT 
+2. MAKE HEADER STICKY AND CHANGE MARGIN TO WINDOW FIT THE CONTENT ✅
 3. REMOVE "WRITE NEW TWEET'S" ON CLICK SLIDING BEHAVIOUR
 4. THAT SHOULD BE IT
 */
+
+@media only screen and (min-width: 1024px) {
+  
+  nav {
+    background-color: slateblue;
+    height: 100px;
+  }
+
+  .desktopFlex {
+    position: fixed;
+    top: 100px;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    align-items: top;
+    justify-content: space-between;
+  }
+
+  .headpanel {
+    height: 50%;
+    width: 400px;
+    margin: 0 auto;
+    margin-top: 100px;
+  }
+
+  .container {
+    margin: 0;
+    padding: 0;
+    flex-basis: 1024px;
+    height: 104vh;
+    overflow: auto;
+  }
+
+  .feed {
+    margin-bottom: 140px; /* we need footroom so you can still see tweets  */
+  }
+}
