--- a/public/styles/desktop.css
+++ b/public/styles/desktop.css
@@ -15,6 +15,10 @@ WHAT DO WE WANT FOR DESKTOP:
     height: 100px;
   }
 
+  img {
+    margin-bottom: 60px;
+  }
+
   .desktopFlex {
     position: fixed;
     top: 100px;
@@ -27,10 +31,9 @@ WHAT DO WE WANT FOR DESKTOP:
   }
 
   .headpanel {
-    height: 50%;
+    min-height: calc(100% - 100px);
     width: 400px;
     margin: 0 auto;
-    margin-top: 100px;
   }
 
   .container {
