--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -21,43 +21,12 @@ header .name {
   text-align: center;
   margin: 0.5em 0;
   color: white;
-  font-weight: normal;
+  /* font-weight: normal; */
 }
 
 header .name h2 {
   display: block;
   margin: 0;
+  font-weight: normal;
 }
 
-@media only screen and (min-width: 650px) { /* ipad-ish dimensions? */
-
-  header {
-    position: sticky;
-    top: -320px;
-    right: 0;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 100;
-  }
-
-  header .portrait {
-    max-height: 100%;
-    width: 40vw;
-    max-width: 256px;
-    padding: 30px 0;
-    
-  }
-
-  nav span {
-    opacity: 1;
-  }
-
-  /* header .name { */
-    /* display: block; */
-    /* position: absolute; */
-    /* bottom: 0; */
-    /* bottom: -20px; */
- }
